unicard_types_macro/tests/ui/enum_test.stderr
error[E0277]: the trait bound `*const i32: unicard_types::WasmType32` is not satisfied
 --> tests/ui/enum_test.rs:7:7
  |
7 |     B(*const i32),
  |       ^^^^^^^^^^ the trait `unicard_types::WasmType32` is not implemented for `*const i32`
  |
  = help: the trait `unicard_types::WasmType32` is implemented for `i32`

error[E0277]: the trait bound `File: unicard_types::WasmType32` is not satisfied
 --> tests/ui/enum_test.rs:9:12
  |
9 |         x: std::fs::File
  |            ^^^^^^^^^^^^^ the trait `unicard_types::WasmType32` is not implemented for `File`
  |
  = help: the following other types implement trait `unicard_types::WasmType32`:
            i8
            i16
            i32
            i64
            u8
            u16
            u32
            u64
          and $N others
